# llmops

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
app/http/: app.py
config/: config.py
internal/exception/: __init__.py  exception.py
internal/handle/: __init__.py  app_handle.py
internal/model/: __init__.py  app.py  user.py
internal/router/: __init__.py  router.py
internal/schema/: __init__.py  app_schemal.py
internal/server/: http.py
internal/service/: __init__.py  app_service.py
llmops-ui/: README.md  package.json  vite.config.ts  vitest.config.ts
llmops-ui/src/: main.ts
llmops-ui/src/api/: app.ts  index.ts
llmops-ui/src/config/: index.ts
llmops-ui/src/models/: app.ts  base.ts
llmops-ui/src/router/: index.ts
llmops-ui/src/stores/: account.ts
llmops-ui/src/utils/: request.ts
llmops-ui/src/views/auth/: LoginView.vue
llmops-ui/src/views/pages/: HomeView.vue
llmops-ui/src/views/space/apps/: DetailView.vue  ListView.vue
pkg/response/: __init__.py  http_code.py  response.py
scripts/mysql/: init.sql
test/: conftest.py
test/internal/handle/: test_app_handlle.py
